--- a/src/components/css/category-nav.css
+++ b/src/components/css/category-nav.css
@@ -34,6 +34,7 @@ width: 65%;
  margin: 8px;
  font-size: 16px;
  background: #faf7f4;
+ text-align: left;
 }
 .catagory-nav-button {
     background-color: none;
