--- a/src/components/css/headlines.css
+++ b/src/components/css/headlines.css
@@ -214,7 +214,7 @@ background-color: red;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width:95%;
+    width:100%;
   margin: 0 auto;
 }
 
